--- a/sharetech/templates/sharetech/profile_edit.html
+++ b/sharetech/templates/sharetech/profile_edit.html
@@ -8,12 +8,12 @@
 <link rel="stylesheet" href="{% static 'sharetech/css/common.css' %}">
 <link rel="stylesheet" href="{% static 'sharetech/css/top.css' %}">
 <link rel="stylesheet" href="{% static 'sharetech/css/profile_edit.css' %}">
+<link rel="stylesheet" href="{% static 'sharetech/css/profile_edit.css' %}">
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.js"></script>
 <script src="{% static 'sharetech/js/common.js' %}"></script>
-<script src="{% static 'sharetech/js/top.js' %}"></script>
-<script src="{% static 'sharetech/js/mypage.js' %}"></script>
+<script src="{% static 'sharetech/js/profile_edit.js' %}"></script>
 {% endblock %}
 
 {% block main %}
@@ -24,12 +24,19 @@
         <div class="chane_email_link">
             <a  href="{% url 'email_change' user_id %}">メールアドレス変更　>></a>
         </div>
-        <form method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field, error in form.errors.items %}
             <h1>{{error|striptags}}</h1>
             <h2>{{field}}</h2>
             {% endfor %}
+            <div class="form_item icon_image">
+                <label for="file">{{form.icon_path.label}}</label>
+                {{form.icon_path}}
+                <div class="image_container">
+                    <canvas width="" height=""></canvas>
+                </div>
+            </div>
             <div class="form_item user_name_input">
                 <div class="username">
                     <label for="name">{{form.family_name_jp.label}}</label>
