--- a/sharetech/static/sharetech/css/top.css
+++ b/sharetech/static/sharetech/css/top.css
@@ -93,10 +93,8 @@ main .split .split_right{
 }
 
 .flex_block .article .contain_img{
-    width: 70%;
-    height: 70%;
-    min-width: 150px;
-    min-height: 150px;
+    width: 175px;
+    height: 175px;
     margin-top: 10px;
     margin-bottom: 10px;
     display: block;
