アイコン表示バグ修正

--- a/sharetech/templates/sharetech/mypage.html
+++ b/sharetech/templates/sharetech/mypage.html
@@ -24,7 +24,7 @@
     <!-- プロフィールブロック -->
     <div class="profile">
         <div class="icon">
-            <img src="{% static 'sharetech/img/default_avater.png' %}" alt="">
+            <img src="{% static icon_img %}" alt="">
         </div>
         <div class="content">
             <p class="name">{{user_info.username_kana}}</p>
