--- a/sharetech/templates/sharetech/password_change.html
+++ b/sharetech/templates/sharetech/password_change.html
@@ -40,7 +40,7 @@
                 {{form.confirm_password}}
             </div>
             <div class="btn_area">
-                <input class="return_btn" type="submit" value="戻る">
+                <a href="{{request.META.HTTP_REFERER}}" class="return_btn">戻る</a>
                 <input class="submit_btn" type="submit" value="確認">
             </div>
         </form>    
