--- a/sharetech/templates/sharetech/profile_edit.html
+++ b/sharetech/templates/sharetech/profile_edit.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="btn_area">
-                <input class="return_btn" type="submit" value="戻る">
+                <a href="{% url 'profile' %}" class="return_btn">戻る</a>
                 <input class="submit_btn" type="submit" value="確認">
             </div>
         </form>    
