--- a/sharetech/templates/sharetech/register.html
+++ b/sharetech/templates/sharetech/register.html
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="submit">
-                    <input class="return_btn" type="submit" value="戻る">
+                    <a href="{{request.META.HTTP_REFERER}}" class="return_btn">戻る</a>
                     <input class="submit_btn" type="submit" value="確認">
                 </div>
                 
