--- a/sharetech/static/sharetech/css/common.css
+++ b/sharetech/static/sharetech/css/common.css
@@ -44,9 +44,9 @@ a{
     box-shadow: -1px 1px 8px 4px rgb(65, 65, 65, 0.8);
 }
 
-.page_header.sticky{
+.page_header.clone{
   position: fixed;
-  top: 0;
+  top: -100px;
 }
 
 .page_header .global_nav{
