--- a/sharetech/static/sharetech/css/consult_window_register.css
+++ b/sharetech/static/sharetech/css/consult_window_register.css
@@ -36,7 +36,7 @@ padding-top: 2em;
   padding: 2em 3em;
 }
 
-.form_wrapper .user_info_wrapper label{
+.form_wrapper .user_info_wrapper .form_item .username label{
   font-size: 1.2em;
   color: #2699FB;
   font-weight: bold;
@@ -52,11 +52,10 @@ padding-top: 2em;
   flex-wrap: wrap;
 }
 
-.form_wrapper .user_info_wrapper .form_item input,
-.form_wrapper .user_info_wrapper .form_item select{
+.form_wrapper .user_info_wrapper .form_item .username input{
 background: #F1F9FF;
 border: 2px solid #2699FB;
-border-radius: 1em;
+border-radius: 4px;
 color: #666;
 font-family: 'Open Sans', sans-serif;
 font-size: 1.2em;
@@ -65,10 +64,10 @@ width: 100%;
 padding: .5em;
 }
 
-.form_wrapper .user_info_wrapper .form_item textarea{
+.form_wrapper .user_info_wrapper .form_item .username textarea{
 background: #F1F9FF;
 border: 2px solid #2699FB;
-border-radius: 1em;
+border-radius: 4px;
 color: #666;
 font-family: 'Open Sans', sans-serif;
 font-size: 1.2em;
@@ -77,14 +76,97 @@ width: 100%;
 padding: .5em;
 }
 
+.big_category label {
+  font-size: 2em;
+  color: #2699FB;
+  font-weight: bold;
+}
+
+/* .small_category label {
+  font-size: 1.2em;
+  color: #2699FB;
+  font-weight: bold;
+} */
+
+.small_category_wrap{
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+}
+
+.form_wrapper .form_item input:-webkit-autofill,
+.form_wrapper .form_item textarea:-webkit-autofill{
+  box-shadow: 0 0 0 1000px white inset;
+}
+
 .form_wrapper .user_info_wrapper .form_item select{
   color: #2699FB;
 }
 
 .form_wrapper .form_item input:focus,
+.form_wrapper .form_item textarea:focus,
 .form_wrapper .form_item select:focus{
 border: 4px solid #2699FB;
 outline: none;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+.small_category label {
+  display: block;
+  position: relative;
+  margin: 20px;
+  padding: 15px 30px 15px 62px;
+  border: 3px solid #fff;
+  border-radius: 100px;
+  color: #fff;
+  background-color: #2699FB;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+  white-space: nowrap;
+  cursor: pointer;
+  user-select: none;
+  transition: background-color .2s, box-shadow .2s;
+}
+
+.small_category label::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 10px;
+  width: 32px;
+  border: 3px solid #fff;
+  border-radius: 100px;
+  transition: background-color .2s;
+}
+
+.small_category label:first-of-type {
+  transform: translateX(-40px);
+}
+
+.small_category label:last-of-type {
+  transform: translateX(40px);
+}
+
+.small_category label:hover, 
+.small_category input:focus + label {
+  box-shadow: 0 0 20px rgba(0, 0, 0, .6);
+}
+
+.small_category input {
+  position: absolute;
+  left: -9999px;
+}
+
+.small_category input:checked + label {
+  background-color: #ab576c;
+}
+
+.small_category input:checked + label::before {
+  background-color: #fff;
 }
 
 .submit{
