modify lp title message

--- a/sharetech/templates/sharetech/landing.html
+++ b/sharetech/templates/sharetech/landing.html
@@ -58,10 +58,10 @@
             </div>
             <div class="landing_top_center">
                 <div class="top_message_block">
-                    <h1 class="top_message">企業の業務課題解決に特化したナレッジの</h1>
-                    <h1 class="top_message">オープンソースプラットフォーム</h1>
+                    <h1 class="top_message">企業のテクノロジー活用に特化した</h1>
+                    <h1 class="top_message">オープンナレッジプラットフォーム</h1>
                     <br />
-                    <h4 class="top_message_sub">テクノロジー専門家と企業を繋ぐ次世代型の課題解決ナレッジシェア</h4>
+                    <h4 class="top_message_sub">テクノロジーの分からない・見つからないをなくします</h4>
                 </div>
                 <div class="top_message_logo">
                     <div class="top_message_inner_logo">
