--- a/sharetech/templates/sharetech/consult_window_register.html
+++ b/sharetech/templates/sharetech/consult_window_register.html
@@ -13,7 +13,7 @@
 <body>
     <header class="register_header">
         <h1>
-            Wellcome to <span>SHARE TECH</span>!
+            Welcome to <span>SHARE TECH</span>!
         </h1>
     </header>
 
@@ -40,37 +40,40 @@
                             </div>
                             <div class="username">
                                 <label for="name">{{form.consult_price.label}}</label>
+                                <h4>※アルファ版では変更できません。</h4>
                                 {{form.consult_price}}    
                             </div>
                             <div class="username">
                                 <label for="name">{{form.archivement.label}}</label>
                                 {{form.archivement}}    
                             </div>
-                        </div>
-                        <ul class="category_contena">
-                            {% for big_cat, small_cat_list in category_dict.items %}
-                            <li>
-                                {% for small_cat in small_cat_list %}
-                                    {% if big_cat == small_cat.1 %} <!-- 大カテゴリのみ先頭に出力 -->
-                                    <div class="big_category">
-                                        <label for="checkbox"><input type="checkbox" name="cat" value={{small_cat.0}}>{{small_cat.1}}</input></label>
-                                    </div>
-                                    <ul class="small_category_wrap">
-                                    {% else %}
-                                    <div class="small_category">
-                                        <label for={{small_cat.0}}><input type="checkbox" name="cat" id={{small_cat.0}} value={{small_cat.0}}>{{small_cat.1}}</input></label>
-                                    </div>
-                                    {% endif %}
+                            <div class="username">
+                                <label for="name">カテゴリ</label>
+                            </div>   
+                            <ul class="category_contena">
+                                {% for big_cat, small_cat_list in category_dict.items %}
+                                    {% for small_cat in small_cat_list %}
+                                        {% if big_cat == small_cat.1 %} <!-- 大カテゴリのみ先頭に出力 -->
+                                        <div class="big_category">
+                                            <label for={{small_cat.0}}>{{small_cat.1}}</label>
+                                        </div>
+                                        <ul class="small_category_wrap">
+                                        {% else %}
+                                        <div class="small_category">
+                                            <input type="checkbox" name="cat" id={{small_cat.0}} value={{small_cat.0}}>
+                                            <label for={{small_cat.0}}>{{small_cat.1}}</label>
+                                        </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                    </ul>
                                 {% endfor %}
-                                </ul>
-                            </li>
-                            {% endfor %}
-                        </ul>
+                            </ul>
+                        </div>   
                     </div>   
                 </div> 
 
                 <div class="submit">
-                    <input class="submit_btn" type="submit" name="next" value="確認">
+                    <input class="submit_btn" type="submit" value="登録">
                 </div>
                 
             </form>
