--- a/sharetech/static/sharetech/css/consult_window_register.css
+++ b/sharetech/static/sharetech/css/consult_window_register.css
@@ -52,7 +52,8 @@ padding-top: 2em;
   flex-wrap: wrap;
 }
 
-.form_wrapper .user_info_wrapper .form_item .username input{
+.form_wrapper .user_info_wrapper .form_item .username input,
+.form_wrapper .user_info_wrapper .form_item .username select{
 background: #F1F9FF;
 border: 2px solid #2699FB;
 border-radius: 4px;
@@ -62,6 +63,13 @@ font-size: 1.2em;
 height: 50px;
 width: 100%;  
 padding: .5em;
+}
+
+.form_wrapper .form_item input:focus,
+.form_wrapper .form_item textarea:focus,
+.form_wrapper .form_item select:focus{
+border: 4px solid #2699FB;
+outline: none;
 }
 
 .form_wrapper .user_info_wrapper .form_item .username textarea{
@@ -79,10 +87,6 @@ padding: .5em;
 .form_wrapper .form_item input:-webkit-autofill,
 .form_wrapper .form_item textarea:-webkit-autofill{
   box-shadow: 0 0 0 1000px white inset;
-}
-
-.form_wrapper .user_info_wrapper .form_item select{
-  color: #2699FB;
 }
 
 /* カテゴリデザイン */
