--- a/sharetech/templates/sharetech/register_done.html
+++ b/sharetech/templates/sharetech/register_done.html
@@ -20,11 +20,7 @@
     <main>
         <!--ログインフォーム-->
         <div class="form_wrapper">
-            <p class="complete_pre_register">
-                いただいた情報にて申請が完了しました。<br>
-                審査には数営業日かかります。<br>
-                審査完了後、結果問わずご登録いただいたメールアドレス宛にご連絡いたします。
-            </p>
+            <p class="complete_pre_register">{{ message | linebreaksbr }}</p>
         </div>
     </main>
 
