--- a/sharetech/static/sharetech/css/common.css
+++ b/sharetech/static/sharetech/css/common.css
@@ -459,3 +459,15 @@ a{
 .page_footer .copy_write{
     margin-top: 10px;
 }
+
+/* エラーメッセージ */
+.form_wrapper .error_msg{
+    text-align: center;
+    padding: 3em 0;
+  }
+  
+  .form_wrapper .error_msg p{
+    color: red;
+    font-weight: bold;
+  }
+  
