--- a/sharetech/templates/sharetech/password_change.html
+++ b/sharetech/templates/sharetech/password_change.html
@@ -23,11 +23,14 @@
     <div class="form_container">
         <form method="POST">
             {% csrf_token %}
+        {% if form.errors %}
+        <div class="error_msg">
             {% for field, error in form.errors.items %}
-            <h1>{{error|striptags}}</h1>
-            <h2>{{field}}</h2>
+            <p>{{error|striptags}}</p>
             {% endfor %}
-            <div class="form_item">
+        </div>
+        {% endif %}
+        <div class="form_item">
                 <label for="name">{{form.password.label}}</label>
                 {{form.password}}
             </div>
