--- a/sharetech/static/sharetech/css/profile_edit.css
+++ b/sharetech/static/sharetech/css/profile_edit.css
@@ -106,6 +106,42 @@
     text-align: center;
 }
 
+/* 専門分野入力エリア追加ボタン */
+.specialize_add_btn,
+.specialize_delete_btn{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
+}
+
+.specialize_input{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1em;
+}
+
+.specialize_add_btn{
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #2699FB;
+  text-align: center;
+}
+
+.specialize_delete_btn{
+  border-radius: 50%;
+  background-color: tomato;
+  color: white;
+  font-weight: bold;
+  font-size: 1.2em;
+  height: 25px;
+  width: 25px;
+  margin: auto;
+  margin-left: 1em;
+}
+
 .submit{
     display: flex;
     justify-content: center;
