--- a/sharetech/templates/sharetech/profile_edit.html
+++ b/sharetech/templates/sharetech/profile_edit.html
@@ -13,6 +13,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.js"></script>
 <script src="{% static 'sharetech/js/common.js' %}"></script>
 <script src="{% static 'sharetech/js/profile_edit.js' %}"></script>
+<script src="{% static 'sharetech/js/user_register.js' %}"></script>
 {% endblock %}
 
 {% block main %}
@@ -79,7 +80,16 @@
                 <label for="name">{{form.position_name.label}}</label>
                 {{form.position_name}}
             </div>
-
+            <div class="form_item specialize_input_area">
+                <label for="name">{{specialize_title}}</label>
+                {% for id, value in specialize.items %}
+                <div class="specialize_input">
+                    <input type="text" name="specialize" max_length="32" id={{id}} value={{value}}>
+                    <button type="button" class="specialize_delete_btn">ー</button>              
+                </div>
+                {% endfor %}
+                <button type="button" class="specialize_add_btn">＋追加</button>
+            </div>
             <div class="btn_area">
                 <a href="{% url 'profile' %}" class="return_btn">戻る</a>
                 <input class="submit_btn" type="submit" value="確認">
