--- a/sharetech/templates/sharetech/register.html
+++ b/sharetech/templates/sharetech/register.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.js"></script>
-    <script src="{% static 'sharetech/js/register.js' %}"></script>    
+    <script src="{% static 'sharetech/js/user_register.js' %}"></script>    
 </head>
 
 <body>
