マイページから登録外面への遷移

--- a/sharetech/templates/sharetech/mypage.html
+++ b/sharetech/templates/sharetech/mypage.html
@@ -18,7 +18,7 @@
 
 {% block content %}
 <div class="create_btn">
-    <a href="#">相談窓口を作る</a>
+    <a href="{% url 'consult_window_register' %}">相談窓口を作る</a>
 </div>
 <div class="mypage">
     <!-- プロフィールブロック -->
