--- a/sharetech/templates/sharetech/landing.html
+++ b/sharetech/templates/sharetech/landing.html
@@ -42,7 +42,7 @@
             <a class="link_inquiry" href="https://www.wrike.com/form/eyJhY2NvdW50SWQiOjQzMzUzNjEsInRhc2tGb3JtSWQiOjU5OTYyNn0JNDc5MTY3NzYzNjk4Ngk3NjAxZDQyZTNlMDUwNmJmNTgwMzFlMWM5ZDVhODkyNThhNmEzYjlhMWM5MjlmMGNkN2E1YWVhNWE2MWYxNDgy">
                 <p>お問い合わせ</p>
             </a>
-            <a class="link_login" href="/login/?next=/">
+            <a class="link_login" href="">
                 <p>ログイン</p>
             </a>
         </div>
@@ -72,12 +72,12 @@
                 <div class="top_message_link">
                     <div class="entry_button">
                         <input type="button" class="find_button" title="Find Expert" value="専門家を探す（登録無料）"
-                            onclick="location.href='/register/'">
+                            onclick="location.href=''">
                     </div>
                     <div class="spacer"></div>
                     <div class="entry_button">
                         <input type="button" class="become_button" title="Become Expert" value="専門家になる（登録無料）"
-                            onclick="location.href='/register/'">
+                            onclick="location.href=''">
                     </div>
                 </div>
                 <div class="top_message_other_link">
@@ -344,11 +344,11 @@
                         <div class="bottom_message_link">
                             <div class="entry_button">
                                 <input type="button" class="find_button" title="Find Expert" value="専門家を探す（登録無料）"
-                                    onclick="location.href='/register/'">
+                                    onclick="location.href=''">
                             </div>
                             <div class="entry_button">
                                 <input type="button" class="become_button" title="Become Expert" value="専門家になる（登録無料）"
-                                    onclick="location.href='/register/'">
+                                    onclick="location.href=''">
                             </div>
                         </div>
                         <div class="bottom_message_other_link">
@@ -372,6 +372,19 @@
     <button type="button" class="back_to_top">
         <span>↑</span>
     </button>
+
+    <div class="lp_temp_message">
+        <div>
+            <h3>
+                現在、製品紹介ページのみの<br>公開となっております。
+            </h3>
+            <br>
+            <a class="temp_link"
+            href="https://www.wrike.com/form/eyJhY2NvdW50SWQiOjQzMzUzNjEsInRhc2tGb3JtSWQiOjU5OTYyNn0JNDc5MTY3NzYzNjk4Ngk3NjAxZDQyZTNlMDUwNmJmNTgwMzFlMWM5ZDVhODkyNThhNmEzYjlhMWM5MjlmMGNkN2E1YWVhNWE2MWYxNDgy">
+                <h4>お問い合わせはこちら</h4>
+            </a>
+        </div>
+    </div>
 
     <!-- フッター -->
     <footer class="landing_page_footer">
