--- a/sharetech/templates/sharetech/consult_window_register.html
+++ b/sharetech/templates/sharetech/consult_window_register.html
@@ -19,63 +19,63 @@
 
     <main>
         <!--ログインフォーム-->
-        <div class="form_wrapper">
-            <h3>相談可能な記事を登録してみましょう</h3>
+        <div class="consult_window_register">
+            <h2>相談窓口作成</h2>
             <form method="POST">
                 {% csrf_token %}
                 {% for field, error in form.errors.items %}
                 <h1>{{error|striptags}}</h1>
                 <h2>{{field}}</h2>
                 {% endfor %}
-                <div class="item_container">
-                    <div class="user_info_wrapper">
-                        <div class="form_item user_name_input">
-                            <div class="username">
-                                <label for="name">{{form.consult_window_title.label}}</label>
-                                {{form.consult_window_title}}    
-                            </div>
-                            <div class="username">
-                                <label for="name">{{form.consult_window_overview.label}}</label>
-                                {{form.consult_window_overview}}    
-                            </div>
-                            <div class="username">
-                                <label for="name">{{form.consult_price.label}}</label>
-                                <h4>※アルファ版では変更できません。</h4>
-                                {{form.consult_price}}    
-                            </div>
-                            <div class="username">
-                                <label for="name">{{form.archivement.label}}</label>
-                                {{form.archivement}}    
-                            </div>
-                            <div class="username">
-                                <label for="name">カテゴリ</label>
-                            </div>   
-                            <ul class="category_contena">
-                                {% for big_cat, small_cat_list in category_dict.items %}
-                                    {% for small_cat in small_cat_list %}
-                                        {% if big_cat == small_cat.1 %} <!-- 大カテゴリのみ先頭に出力 -->
-                                        <div class="big_category">
-                                            <label for={{small_cat.0}}>{{small_cat.1}}</label>
-                                        </div>
-                                        <ul class="small_category_wrap">
-                                        {% else %}
-                                        <div class="small_category">
-                                            <input type="checkbox" name="cat" id={{small_cat.0}} value={{small_cat.0}}>
-                                            <label for={{small_cat.0}}>{{small_cat.1}}</label>
-                                        </div>
-                                        {% endif %}
-                                    {% endfor %}
-                                    </ul>
-                                {% endfor %}
-                            </ul>
+                <div class="form_container">
+                    <div class="form_item">
+                        <div class="text_input">
+                            <label for="name">{{form.consult_window_title.label}}</label>
+                            {{form.consult_window_title}}    
+                        </div>
+                        <div class="text_input">
+                            <label for="name">{{form.consult_window_overview.label}}</label>
+                            {{form.consult_window_overview}}    
+                        </div>
+                        <div class="text_input">
+                            <label for="name">{{form.consult_price.label}}</label>
+                            <h4>※アルファ版では変更できません。</h4>
+                            {{form.consult_price}}    
+                        </div>
+                        <div class="text_input">
+                            <label for="name">{{form.archivement.label}}</label>
+                            {{form.archivement}}    
+                        </div>
+                        <div class="text_input">
+                            <label for="name">{{form.timerex_url.label}}</label>
+                            {{form.timerex_url}}    
+                        </div>
+                        <div class="text_input">
+                            <label for="name">カテゴリ</label>
                         </div>   
+                        <ul class="category_input">
+                            {% for big_cat, small_cat_list in category_dict.items %}
+                                {% for small_cat in small_cat_list %}
+                                    {% if big_cat == small_cat.1 %} <!-- 大カテゴリのみ先頭に出力 -->
+                                    <div class="big_category">
+                                        <label for={{small_cat.0}}>{{small_cat.1}}</label>
+                                    </div>
+                                    <ul class="small_category_wrap">
+                                    {% else %}
+                                    <div class="small_category">
+                                        <input type="checkbox" name="cat" id={{small_cat.0}} value={{small_cat.0}}>
+                                        <label for={{small_cat.0}}>{{small_cat.1}}</label>
+                                    </div>
+                                    {% endif %}
+                                {% endfor %}
+                                </ul>
+                            {% endfor %}
+                        </ul>
                     </div>   
+                    <div class="submit">
+                        <input class="submit_btn" type="submit" value="登録">
+                    </div>
                 </div> 
-
-                <div class="submit">
-                    <input class="submit_btn" type="submit" value="登録">
-                </div>
-                
             </form>
         </div>
     </main>
