--- a/sharetech/templates/sharetech/landing.html
+++ b/sharetech/templates/sharetech/landing.html
@@ -112,7 +112,7 @@
                                 1. 業務課題の解決策を発見
                             </h3>
                             <p class="item_message">
-                                企業の業務上の課題解決に関するナレッジが ShareTec 内でオープンソース化されています。検索で「見つからない」を無くします。
+                                企業の業務上の課題解決に関するナレッジが ShareTech 内でオープンソース化されています。検索で「見つからない」を無くします。
                             </p>
                         </div>
                         <div class="spacer"></div>
@@ -204,7 +204,7 @@
                             </div>
                             <div class="detail_message">
                                 <p>こんなことはありませんか？<br>
-                                    ShareTec の専門家に相談すれば、<br>
+                                    ShareTech の専門家に相談すれば、<br>
                                     業務上の課題管理から解決策実行まですぐにできます。</p>
                                 <p>・リモートワークで他メンバーの仕事状況の可視化が悩み<br>
                                     ・ABC サービス開発でヘルスケア領域の知見を取り入れたい<br>
