マイページ取得情報更新

--- a/sharetech/templates/sharetech/base.html
+++ b/sharetech/templates/sharetech/base.html
@@ -77,7 +77,7 @@
   {% if applying_flg == '1' %}
   <div class="overlay">
     <div class="apply_declear" value_id={{consult_window_id}} value_date='2021-10-10'>
-      <p>「これはテストタイトルです。」の<br>
+      <p>「{{applying_title}}」の<br>
           相談お申込の状況を入力してください</p>
       <div class="apply_status">
           <label for="cancel">
