--- a/sharetech/static/sharetech/css/profile_edit.css
+++ b/sharetech/static/sharetech/css/profile_edit.css
@@ -43,7 +43,8 @@
   }
 
 .profile_edit .form_container .form_item input,
-.profile_edit .form_container .form_item select{
+.profile_edit .form_container .form_item select,
+.profile_edit .form_container .form_item textarea{
     background: white;
     border: 2px solid #2699FB;
     border-radius: 1em;
@@ -56,7 +57,8 @@
 }
 
 .profile_edit .form_container .form_item input:focus,
-.profile_edit .form_container .form_item select:focus{
+.profile_edit .form_container .form_item select:focus,
+.profile_edit .form_container .form_item textarea:focus{
     border: 4px solid #2699FB;
     outline: none;
 }
@@ -104,6 +106,12 @@
 
 .btn_area{
     text-align: center;
+}
+
+.large_input textarea{
+    height: 200px !important;
+    overflow-wrap: wrap;
+    resize: none;
 }
 
 /* 専門分野入力エリア追加ボタン */
