フッター切り出し・問い合わせリンク更新

--- a/sharetech/templates/sharetech/consult_window_detail.html
+++ b/sharetech/templates/sharetech/consult_window_detail.html
@@ -72,7 +72,7 @@
         </div>
         {% else %}
         <div class="apply_btn">
-            <button class="button">申込に進む</button>
+            <button class="button" redirect="{{timerexUrl}}">申込に進む</button>
         </div>
         {% endif %}
     </div>
@@ -80,20 +80,5 @@
 {% endblock %}
 
 {% block footer %}
-<footer class="page_footer">
-    <div class="footer_list">
-        <ul>
-            <li>
-                <a href="">シェアテックについて</a>
-            </li>
-            <li>
-                <a href="">利用規約</a>
-            </li>
-            <li>
-                <a href="">お問い合せ</a>
-            </li>
-        </ul>
-    </div>
-    <p class="copy_write">©2021 ShareTech Co., Ltd., All rights reserved</p>
-</footer>
+{% include 'sharetech/_footer.html' %}
 {% endblock %}
