--- a/sharetech/templates/500.html
+++ b/sharetech/templates/500.html
@@ -28,20 +28,5 @@
 {% endblock %}
 
 {% block footer %}
-<footer class="page_footer">
-    <div class="footer_list">
-        <ul>
-            <li>
-                <a href="">シェアテックについて</a>
-            </li>
-            <li>
-                <a href="">利用規約</a>
-            </li>
-            <li>
-                <a href="">お問い合せ</a>
-            </li>
-        </ul>
-    </div>
-    <p class="copy_write">©2021 ShareTech Co., Ltd., All rights reserved</p>
-</footer>
+{% include 'sharetech/_footer.html' %}
 {% endblock %}
